# energetik

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/service/: base_inhibitor.cpp  base_inhibitor.hpp  fullscreen_inhibitor.cpp  fullscreen_inhibitor.hpp  main.cpp  process_inhibitor.cpp  process_inhibitor.hpp  service.cpp  service.hpp  settings.cpp  settings.hpp
